--- a/EpidemikWidget/EpidemikWidget.entitlements
+++ b/EpidemikWidget/EpidemikWidget.entitlements
@@ -5,6 +5,7 @@
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.io.thaumavor.rbradford.Epidemik</string>
+		<string>group.Epidemik</string>
 	</array>
 </dict>
 </plist>
